kubernetes/traefik/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  selector:
    app: traefik
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: dashboard
      protocol: TCP
      port: 8080
      targetPort: 8080
